generate sge-ecs from ashley sources as a dependent of sge-core (ecs compile errors 13 -> 0; ecs tests JVM 257/258, JS 258/259, Native 258/259 before the component type class)
Squashed rebase of generate-ecs onto 982da065.
- BalticPorterEcsGen (the core manifest built as master builds it, providedSources included): sge-ecs main and test sources generated from ashley, with a frozen derived policy (sge-port/ecs-derived-policy.tsv); 21 hand-written ecs files deleted, 3 platform files remain
- core run labelled sge-l0 and every run's reportDir set and cleared, so dependents find the base port maps (316 BaseMapMissing fatals -> 0)
- generated-port action: the key covers the ashley submodule commit, and the ecs tree is restored on a generate-mode cache hit; per-load nanoTime nonce removed from build.sbt
- AshleyPolicy: Bits redirected to scala.collection.mutable.BitSet within com.badlogic.ashley (get/set/clear(int)/or renamed; containsAll, intersects, length, nextSetBit as scoped call-site templates, nextSetBit keeping java's -1 for a negative start); BitSet#isEmpty and ImmutableArray's size/first/peek/iterator/toArray parenless; the template methods processEntity/updateInterval narrowed to plain protected; SystemManager#getSystem and Bag#get Nullable (Bag#get past capacity answers empty, user ruling 2026-09-25)
- ecs tests back to master's text except BagSuite's ten get assertions, which compare Nullable values (ISS-892)
- JS/Native: 3 Mockito-dependent generated tests excluded (ISS-889)
- tracker rows ISS-888..ISS-893

covenant-baseline-approved: the one row removed belongs to the hand-written sge-extension/ecs Engine.scala, deleted with its file because Engine is now generated from ashley